--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,12 @@
       </header>
 
     <main>
+		<canvas id="sound-visualizer" width="100%" height="300px">
+		</canvas>
+		<div id="controls">
+  	 <button id="recordButton">Record</button>
+  	 <button id="stopButton" disabled>Stop</button>
+    </div>
 		<div class="container-fluid">
       <div class="row">
       <ul class="collection" id="msg_ul">
