--- a/templates/index.html
+++ b/templates/index.html
@@ -20,10 +20,7 @@
     <main>
 		<canvas id="sound-visualizer" width="100%" height="300px">
 		</canvas>
-		<div id="controls">
-  	 <button id="recordButton">Record</button>
-  	 <button id="stopButton" disabled>Stop</button>
-    </div>
+
 		<div class="container-fluid">
       <div class="row">
       <ul class="collection" id="msg_ul">
@@ -44,6 +41,12 @@
 
     <footer class="page-footer">
       <div class="container">
+				<div class="row controls-row">
+					<span id="controls">
+					 <button id="recordButton">Record</button>
+					 <button id="stopButton" disabled>Stop</button>
+				 </span>
+			 </div>
             <div class="row">
               <nav>
                   <div class="nav-wrapper">
