--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 		<meta charset="utf-8">
 		<meta name="LH7 chatbot" content="LH7 chatbot">
 		<title>LH7+ chatbot</title>
+		<link rel="shortcut icon" type="image/png" href="static/img/favicon.ico"/>
 		<link rel="stylesheet" href="/static/css/style.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
@@ -11,7 +12,7 @@
         <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper">
-            <a href="#!" class="brand-logo center">LH7+</a>
+            <a href="#!" class="brand-logo center"><img id="logo-img" class="responsive-img" src="static/img/lh7-logo.png"></a>
           </div>
         </nav>
         </div>
