--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,19 @@
   margin-bottom: 5px !important;
 } */
 
+nav .brand-logo.center {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%) !important;
+  height:100%;
+}
+
+#logo-img {
+  filter: brightness(0) invert(1);
+  height:100%;
+  padding: 5px;
+}
+
 #footer-row {
   margin-bottom: 0px !important;
 }
