added dropdown for TTS voice selection

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,20 @@
     <body>
       <header>
         <div class="navbar-fixed">
+					<!-- TTS language selector -->
+					<ul id="voice-selector" class="dropdown-content">
+					  <!-- <li><a href="#!">one</a></li>
+					  <li><a href="#!">two</a></li>
+					  <li class="divider"></li>
+					  <li><a href="#!">three</a></li> -->
+					</ul>
         <nav>
           <div class="nav-wrapper">
             <a href="#!" class="brand-logo center"><img id="logo-img" class="responsive-img" src="static/img/lh7-logo.png"></a>
+						<ul class="right hide-on-med-and-down">
+				      <!-- Dropdown Trigger -->
+				      <li><a class="dropdown-trigger" href="#!" data-target="voice-selector">TTS voice<i class="material-icons right">arrow_drop_down</i></a></li>
+				    </ul>
           </div>
         </nav>
         </div>
