added autofocus on text input and disabled autocompletion

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,9 +64,9 @@
               <nav>
                   <div class="nav-wrapper">
 										<div class="col s11">
-                    <form id="user_input_form">
+                    <form id="user_input_form" autocomplete="off">
                       <div class="input-field">
-                        <input id="user_input" type="search" required>
+                        <input id="user_input" type="search" required autofocus>
                         <label class="label-icon" for="user_input"><i class="material-icons">send</i></label>
 
                       </div>
