--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
                     </form>
 										</div>
 										<div class="col s1">
-										<ul class="right hide-on-med-and-down">
+										<ul class="right">
 									    <li><a id="record-button" class="btn-floating waves-effect waves-light teal darken-2">
 												<i class="material-icons">mic</i>
 											</a></li>
